--- a/static/css/style.less
+++ b/static/css/style.less
@@ -4,7 +4,7 @@
 @light-grey:  #eeeeee;
 @med-grey:  #999999;
 @dark-grey:  #4d4d4d;
-@blue:  #0e94ec;
+@blue:  rgb(255,100,0);
 @accent:  @blue;
 @sans: 'PT Sans', sans-serif;
 @serif: 'PT Serif', serif;
@@ -66,6 +66,9 @@ aside {
           border: 3px solid @light-grey;
           .border-radius(15px);
           color: @med-grey;
+        }
+        a.active {
+          border: 3px solid @blue;
         }
       }
     }
