--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,21 @@
     <h3><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h3>
   </div>
   <div class="article_text">
-    {{ article.summary }}
+    {{ article.content }}
+  </div>
+  <div class="article_meta">
+    <p>Category: <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a></p>
+    {% if article.tags %}
+    <p>Tags:
+      {% for tag in article.tags %}
+      <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>{% if not loop.last %},{% endif %}
+      {% endfor %}
+    </p>
+    <p>Posted on {{ article.locale_date }}</p>
+    {% endif %}
+    {% if DISQUS_SITENAME %}
+    <p>Comments: <a href="#" onclick="javascript:toggleComments();return false;">toggle</a></p>
+    {% endif %}
   </div>
 </article>
 {% if not loop.last %}
@@ -18,3 +32,4 @@
 {% block footer %}
 {% include "modules/pagination.html" %}
 {% endblock %}
+{%block menublog%} class="active"{%endblock%}
