--- a/static/css/style.less
+++ b/static/css/style.less
@@ -24,6 +24,14 @@ a {
   text-decoration: none;
 }
 
+sup {
+  font-size: 10px;
+}
+
+.footnote {
+  font-size: 14px;
+}
+
 hr {
   color: @light-grey;
   background-color: @light-grey;
