--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,16 @@ a {
   color: #000000;
   text-decoration: none;
 }
+sup {
+  font-size: 10px;
+}
+.footnote {
+  font-size: 14px;
+}
+a {
+  color: #000000;
+  text-decoration: none;
+}
 hr {
   color: #eeeeee;
   background-color: #eeeeee;
