--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
     </footer>
 
     <div id="ending_message">
-    <p>Written by <a href="{{SITEURL}}/pages/about-me.html">Julien Pivotto</a>.
+    <p>Written by <a href="{{SITEURL}}/">Julien Pivotto</a>.
     Licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/deed.en_US">Creative Commons Attribution 4.0 International License</a>.
 Built using <a href="http://getpelican.com" target="_blank">Pelican</a>. Theme by Giulio Fidente on <a href="https://github.com/giulivo/pelican-svbhack" target="_blank">github</a>. {% if INTERNET_DEFENSE_LEAGUE %}Member of the <a href="http://internetdefenseleague.org">Internet Defense League</a>{% endif %}.</p>
 <div><span class="be">&nbsp;&nbsp;&nbsp;&nbsp;</span>&nbsp;&nbsp;<span id="NoGov"></span> without government</div>
